--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -31,10 +31,7 @@ head
     script(src='/assets/js/cards.js')
 
     //- Import SWAL
-    if (isBotEditPage)
-        script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
-        link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
-    if (isBotLikePage)
+    if (isBotEditPage || isBotLikePage || isAdminPage)
         script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
         link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
 
