--- a/src/dynamic/includes/nav.pug
+++ b/src/dynamic/includes/nav.pug
@@ -11,10 +11,10 @@
             include arrow.pug
             a(href=`/api/embed/${bot.botid}` target="_blank")
                 span.navtext Embed
-        if (req.baseUrl == "/user" || req.path == "/me")
+        if (req.baseUrl == "/user" || req.baseUrl == "/me")
             a(href=`/user/${userProfile.id}`)
                 span.navtext #{userProfile.username}
-        if (req.baseUrl == "/user")
+        if (tag)
             a(href=`/tag/${tag}`)
                 span.navtext.capitalise #{tag}
     a#searcher.navtag.search(href='/bots/search/')
