Use single # in url of bot edit page

--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -12,10 +12,10 @@ body(onload="load()")
         h1 Edit
       br
       .sidebar
-        a.link(href="##edit") Edit Details
-        a.link(href="##links") Change Links
-        a.link(href="##server-count") Server count
-        a.link(href="##manage") Manage Bot
+        a.link(data-target="#edit") Edit Details
+        a.link(data-target="#links") Change Links
+        a.link(data-target="#server-count") Server count
+        a.link(data-target="#manage") Manage Bot
       .main-section
         #edit.section
           form.center
