Add css for verified badge

--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -15,7 +15,9 @@ body
         .right
             h2(style='display: inline;')
                 | #{bot.username}
-                | !{discord_verified ? '<i class="fas fa-medal"></i>' : ""}
+                if (discord_verified)
+                    i.fas.fa-medal.verified
+                        span.verified_tooltip Verified Bot
                 a.likes(href=`/bots/like/${bot.botid}`)
                     i.far.fa-heart
                     | #{bot.likes || 0}
