--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -28,7 +28,7 @@ body(onload="load()")
               .placeholder Prefix
             br
             .input-holder
-              input#description.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
+              input#description.input(maxlength=max_summary_length type='text' placeholder=' ' value=bot.description)
               .placeholder Summary
             br
             .input-holder
