--- a/src/dynamic/resubmit.pug
+++ b/src/dynamic/resubmit.pug
@@ -21,7 +21,7 @@ body
           .placeholder Prefix
         br
         .input-holder
-          input#description.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
+          input#description.input(maxlength=max_summary_length type='text' placeholder=' ' value=bot.description)
           .placeholder Summary
         br
         .input-holder
@@ -34,7 +34,7 @@ body
             | Description
         br
         .input-holder
-          input#note.input(maxlength='120' type='text' placeholder=' ')
+          input#note.input(maxlength=max_summary_length type='text' placeholder=' ')
           .placeholder Note to admin
         br
         .input-holder
