--- a/src/dynamic/includes/nav.pug
+++ b/src/dynamic/includes/nav.pug
@@ -11,7 +11,7 @@
             include arrow.pug
             a(href=`/api/embed/${bot.botid}` target="_blank")
                 span.navtext Embed
-        if (req.baseUrl == "/user" || req.baseUrl == "/me")
+        if ((req.baseUrl == "/user" || req.baseUrl == "/me") && userProfile)
             a(href=`/user/${userProfile.id}`)
                 span.navtext #{userProfile.username}
         if (req.baseUrl == "/tag")
