--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -54,4 +54,4 @@ body
             each person in owners
                 a.owner(href=`/user/${person.id}`)
                     img(height='30px' src=person.tag !== 'Unknown User'  ? person.displayAvatarURL({format: "png", size: 256}) : '/assets/default-avatar.png')
-                    span.navtext #{person.tag}
+                    span.tag #{person.tag}
