--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -847,6 +847,11 @@ a {
   cursor: pointer;
 }
 
+.tag {
+  position: relative;
+  top: -10px;
+}
+
 @media (max-width: 1000px) {
   .right {
     margin: 0 auto;
