Add moderator icon

--- a/src/dynamic/user/index.pug
+++ b/src/dynamic/user/index.pug
@@ -11,6 +11,10 @@ body
                 span.badge
                     img(src='/assets/img/admin.png' title='Admin')
                     |  Admin
+            if (moderator)
+                span.badge
+                    img(src='/assets/img/moderator.png' title='Moderator')
+                    |  Moderator
     #cards
         each val, i in cards
             div.card
