--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -606,8 +606,8 @@ hr {
 }
 
 .badge img {
-  width: 30px;
-  margin-right: 10px;
+  width: 25px;
+  margin-right: 5px;
   vertical-align: middle;
 }
 
@@ -618,6 +618,7 @@ hr {
   padding: 5px 10px;
   background-color: var(--background-2);
   border-radius: 50px;
+  margin: 0 10px;
 }
 
 .smallwidth {
